--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,21 @@ body {
   z-index: -1;
 }
 
-.startButton {
+.controls {
   position: absolute;
-  top: 90%;
+  bottom: 5%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
+
+  display: flex;
+  flex-direction: column;
+}
+
+.startButton {
+  /* position: absolute; */
+  /* top: 90%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
   background-color: #000;
   color: #fff;
   border: 2px solid #fff;
