--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ body {
 
   display: flex;
   flex-direction: column;
+  gap: 5px;
 }
 
 .startButton {
@@ -40,4 +41,18 @@ body {
 .startButton:hover {
   background-color: #fff;
   color: #000;
+}
+
+label {
+  padding-top: 10px;
+}
+
+input[type='text'] {
+  background-color: #000;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
 }
